--- a/marineproject 2nd oct/marineproject/templates/signup.html
+++ b/marineproject 2nd oct/marineproject/templates/signup.html
@@ -1,4 +1,4 @@
-{% load static %}
+<!-- {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,9 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
 </head>
-<!-- copy lines 15-25 -->
+copy lines 15-25 -->
 
-<body>
+<!-- <body>
     <div class="container d-flex justify-content-center align-items-center">
         <form action="" method="POST">
             <div class="card">
@@ -139,4 +139,194 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
 
+</html> --> -->
+
+
+<!DOCTYPE html>
+<html style="font-size: 16px;">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="page_type" content="np-template-header-footer-from-plugin">
+    <title>Sign up</title>
+    <link rel="stylesheet" href="nicepage.css" media="screen">
+<!-- <link rel="stylesheet" href="Sign-up.css" media="screen"> -->
+    <!-- <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script> -->
+    <!-- <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script> -->
+    <meta name="generator" content="Nicepage 3.29.1, nicepage.com">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+    
+    
+    <script type="application/ld+json">{
+		"@context": "http://schema.org",
+		"@type": "Organization",
+		"name": ""
+}</script>
+    <meta name="theme-color" content="#478ac9">
+    <meta property="og:title" content="Sign up">
+    <meta property="og:type" content="website">
+  </head>
+  <body class="u-body">
+    <section class="u-align-center u-clearfix u-image u-shading u-section-1" data-image-width="900" data-image-height="752" id="sec-48fd">
+      <div class="u-align-left u-clearfix u-sheet u-sheet-1">
+        <h3 class="u-align-left u-text u-text-default u-text-1">Sign up</h3>
+        <div class="u-form u-form-1">
+          <form action="" method="POST" class="u-clearfix u-form-spacing-9 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 10px;">
+            <!-- <div class="u-form-group u-form-name u-form-group-1">
+              <label for="name-2865" class="u-form-control-hidden u-label"></label>
+              <input type="text" placeholder="Enter your Full Name" id="name-2865" name="name" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-radius-50 u-white" required="">
+            </div>
+            <div class="u-form-group u-form-group-2">
+              <label for="text-bead" class="u-form-control-hidden u-label"></label>
+              <input type="text" placeholder="Username" id="text-bead" name="text" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-radius-50 u-white">
+            </div>
+            <div class="u-form-email u-form-group">
+              <label for="email-2865" class="u-form-control-hidden u-label"></label>
+              <input type="email" placeholder="Enter a valid email address" id="email-2865" name="email" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-radius-50 u-white" required="">
+            </div>
+            <div class="u-form-group u-form-partition-factor-2 u-form-group-4">
+              <label for="text-bb44" class="u-form-control-hidden u-label"></label>
+              <input type="text" placeholder="Password" id="text-bb44" name="text-1" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-radius-50 u-white">
+            </div>
+            <div class="u-form-group u-form-partition-factor-2 u-form-group-5">
+              <label for="text-e10d" class="u-form-control-hidden u-label"></label>
+              <input type="text" placeholder="Confirm Password" id="text-e10d" name="text-2" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-radius-50 u-white">
+            </div>
+            <div class="u-form-checkbox u-form-group u-form-group-6">
+              <input type="checkbox" id="checkbox-6647" name="checkbox-1" value="On">
+              <label for="checkbox-6647" class="u-label">Trainer</label>
+            </div>
+            <div class="u-form-checkbox u-form-group u-form-group-7">
+              <input type="checkbox" id="checkbox-2766" name="checkbox" value="On">
+              <label for="checkbox-2766" class="u-label">HR</label>
+            </div>
+            <div class="u-form-checkbox u-form-group u-form-group-8">
+              <input type="checkbox" id="checkbox-3012" name="checkbox-2" value="On">
+              <label for="checkbox-3012" class="u-label">Trainee</label>
+            </div>
+            <div class="u-align-right u-form-group u-form-submit">
+              <a href="#" class="u-btn u-btn-round u-btn-submit u-button-style u-radius-50">Submit</a>
+              <input type="submit" value="submit" class="u-form-control-hidden">
+            </div>
+            <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+            <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+            <input type="hidden" value="" name="recaptchaResponse"> -->
+
+            {% csrf_token %} {{form.as_p}}
+            <div><button>Sign Up</button></div>
+          </form>
+        </div>
+      </div>
+    </section>
+    
+    
+    
+    <!-- <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
+        <span>Website Templates</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="" target="_blank">
+        <span>Website Builder Software</span>
+      </a>. 
+    </section> -->
+    <style> .u-section-1 {
+      background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/Oil-Tanker-Ships-Seaport-Thailand_News.jpg");
+      background-position: 50% 50%;
+    }
+    
+    .u-section-1 .u-sheet-1 {
+      min-height: 619px;
+    }
+    
+    .u-section-1 .u-text-1 {
+      margin: 92px auto 0 269px;
+    }
+    
+    .u-section-1 .u-form-1 {
+      height: 413px;
+      width: 638px;
+      margin: 15px auto 60px;
+    }
+    
+    .u-section-1 .u-form-group-1 {
+      margin-bottom: 0;
+    }
+    
+    .u-section-1 .u-form-group-2 {
+      margin-left: 0;
+    }
+    
+    .u-section-1 .u-form-group-4 {
+      margin-left: 0;
+    }
+    
+    .u-section-1 .u-form-group-5 {
+      margin-left: 0;
+    }
+    
+    .u-section-1 .u-form-group-6 {
+      margin-bottom: 0;
+    }
+    
+    .u-section-1 .u-form-group-7 {
+      margin-bottom: 0;
+    }
+    
+    .u-section-1 .u-form-group-8 {
+      margin-bottom: 0;
+    }
+    
+    @media (max-width: 1199px) {
+      .u-section-1 .u-sheet-1 {
+        min-height: 510px;
+      }
+    
+      .u-section-1 .u-form-group-2 {
+        margin-top: 20px;
+      }
+    }
+    
+    @media (max-width: 991px) {
+      .u-section-1 .u-sheet-1 {
+        min-height: 391px;
+      }
+    
+      .u-section-1 .u-text-1 {
+        margin-left: 206px;
+      }
+    }
+    
+    @media (max-width: 767px) {
+      .u-section-1 .u-sheet-1 {
+        min-height: 293px;
+      }
+    
+      .u-section-1 .u-text-1 {
+        margin-left: 155px;
+      }
+    
+      .u-section-1 .u-form-1 {
+        width: 540px;
+      }
+    }
+    
+    @media (max-width: 575px) {
+      .u-section-1 .u-sheet-1 {
+        min-height: 184px;
+      }
+    
+      .u-section-1 .u-text-1 {
+        margin-left: 98px;
+      }
+    
+      .u-section-1 .u-form-1 {
+        width: 340px;
+      }
+    }</style>
+  </body>
 </html>
